some hashing/signature code related to creating an immutable log
